--- a/notebooks/exp.ipynb
+++ b/notebooks/exp.ipynb
@@ -2,17 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler, OrdinalEncoder\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score, precision_score, recall_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,16 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\Hariprasad\\\\Documents\\\\Admission-prediction\\\\notebooks'"
+       "'c:\\\\Users\\\\Hariprasad\\\\Documents\\\\Admission-prediction\\\\notebooks'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +185,7 @@
        "4                  False       False  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,30 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['type_school', 'school_accreditation', 'gender', 'interest',\n",
-       "       'residence', 'parent_age', 'parent_salary', 'house_area',\n",
-       "       'average_grades', 'parent_was_in_college', 'in_college'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -246,52 +231,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x=df.drop(columns='in_college')"
+    "x=df.drop(columns='in_college')\n",
+    "y=df['in_college']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_x,test_x,train_y,test_y=train_test_split(x,y)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  2.0492879 ,   0.        ,   0.        , ...,   2.00160192,\n",
-       "          0.        ,  83.        ],\n",
-       "       [  2.0492879 ,   0.        ,   0.        , ...,   2.00160192,\n",
-       "          0.        ,  76.8       ],\n",
-       "       [  2.0492879 ,   0.        ,   1.        , ...,   2.00160192,\n",
-       "          0.        ,  80.6       ],\n",
-       "       ...,\n",
-       "       [  0.        ,   2.0492879 ,   0.        , ...,   2.00160192,\n",
-       "          0.        ,  75.2       ],\n",
-       "       [  2.0492879 ,   0.        ,   1.        , ...,   0.        ,\n",
-       "          2.00160192, 105.8       ],\n",
-       "       [  2.0492879 ,   0.        ,   1.        , ...,   0.        ,\n",
-       "          2.00160192,  69.1       ]])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.preprocessing import OneHotEncoder, StandardScaler, OrdinalEncoder\n",
-    "from sklearn.pipeline import Pipeline\n",
+    "\n",
     "\n",
     "# Define each pipeline with StandardScaler adjusted for sparse matrices\n",
     "type_school_pipe1 = Pipeline(steps=[\n",
@@ -353,8 +316,96 @@
     "    remainder='passthrough'  # This will pass through the columns not explicitly mentioned in transformers\n",
     ")\n",
     "\n",
-    "# Example usage\n",
-    "preprocessor.fit_transform(x)\n"
+    "\n",
+    "# Example usage\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_x=preprocessor.fit_transform(train_x)\n",
+    "test_x=preprocessor.transform(test_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models={'lgr':LogisticRegression(),\n",
+    "        'dt':DecisionTreeClassifier(),\n",
+    "        'rf':RandomForestClassifier()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Hariprasad\\Documents\\Admission-prediction\\env\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:460: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metrics for lgr:\n",
+      "Confusion Matrix:\n",
+      "[[109  22]\n",
+      " [ 15 104]]\n",
+      "Accuracy: 0.85\n",
+      "Precision: 0.83\n",
+      "Recall: 0.87\n",
+      "Metrics for dt:\n",
+      "Confusion Matrix:\n",
+      "[[100  31]\n",
+      " [ 19 100]]\n",
+      "Accuracy: 0.80\n",
+      "Precision: 0.76\n",
+      "Recall: 0.84\n",
+      "Metrics for rf:\n",
+      "Confusion Matrix:\n",
+      "[[113  18]\n",
+      " [ 14 105]]\n",
+      "Accuracy: 0.87\n",
+      "Precision: 0.85\n",
+      "Recall: 0.88\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "    model.fit(train_x, train_y)\n",
+    "    pred = model.predict(test_x)\n",
+    "    \n",
+    "    # Compute metrics\n",
+    "    conf_matrix = confusion_matrix(test_y, pred)\n",
+    "    acc = accuracy_score(test_y, pred)\n",
+    "    prec = precision_score(test_y, pred) \n",
+    "    rec = recall_score(test_y, pred)      \n",
+    "\n",
+    "    print(f\"Metrics for {name}:\\n\"\n",
+    "          f\"Confusion Matrix:\\n{conf_matrix}\\n\"\n",
+    "          f\"Accuracy: {acc:.2f}\\n\"\n",
+    "          f\"Precision: {prec:.2f}\\n\"\n",
+    "          f\"Recall: {rec:.2f}\")\n"
    ]
   },
   {
